add hotels resource
