# api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -33,6 +33,31 @@ paths:
           in: query
           description: The name of the person to whom to say hello
           required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /hotels:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: hotels
+    x-a127-apply: {}
+    get:
+      description: Returns a list of nearby hotels
+      # used as the method name of the controller
+      operationId: getHotels
+      parameters:
+        - name: location
+          in: query
+          description: The latitude and longitude of search around
+          required: true
           type: string
       responses:
         "200":
